# mini-vtysh

./: Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  vty.h
vtysh/: Makefile.am  Makefile.in  vtysh.c  vtysh.h  vtysh_cmd.c  vtysh_config.c
